It works now. Sand goes brrrrrrrrrrrrrrrrr

--- a/falling-sand/falling-sand.vcxproj
+++ b/falling-sand/falling-sand.vcxproj
@@ -99,25 +99,26 @@
   <ItemGroup>
     <ClInclude Include="src\AppInstance.hpp" />
     <ClInclude Include="src\Application.hpp" />
+    <ClInclude Include="src\ComputeShader.hpp" />
     <ClInclude Include="src\Grid.hpp" />
     <ClInclude Include="src\InputHandler.hpp" />
-    <ClInclude Include="src\InstancedQuadRenderer.hpp" />
     <ClInclude Include="src\Shader.hpp" />
     <ClInclude Include="src\FallingSand.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\ComputeShader.cpp" />
     <ClCompile Include="src\Grid.cpp" />
     <ClCompile Include="src\InputHandler.cpp" />
-    <ClCompile Include="src\InstancedQuadRenderer.cpp" />
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\FallingSand.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="vendor\glad\src\glad.c" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\shaders\instancedQuad.frag" />
-    <None Include="src\shaders\instancedQuad.vert" />
+    <None Include="src\shaders\fsq.frag" />
+    <None Include="src\shaders\fsq.vert" />
+    <None Include="src\shaders\grid_update.comp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
