--- a/falling-sand/falling-sand.vcxproj.filters
+++ b/falling-sand/falling-sand.vcxproj.filters
@@ -15,36 +15,36 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\AppInstance.hpp">
+    <ClInclude Include="src\core\AppInstance.hpp">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\Application.hpp">
+    <ClInclude Include="src\core\Application.hpp">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\InputHandler.hpp">
+    <ClInclude Include="src\core\InputHandler.hpp">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\Shader.hpp">
+    <ClInclude Include="src\core\Shader.hpp">
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="src\FallingSand.hpp">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\Grid.hpp">
+    <ClInclude Include="src\core\Grid.hpp">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\ComputeShader.hpp">
+    <ClInclude Include="src\core\ComputeShader.hpp">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Application.cpp">
+    <ClCompile Include="src\core\Application.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\InputHandler.cpp">
+    <ClCompile Include="src\core\InputHandler.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\Shader.cpp">
+    <ClCompile Include="src\core\Shader.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\FallingSand.cpp">
@@ -56,8 +56,8 @@
     <ClCompile Include="vendor\glad\src\glad.c">
       <Filter>vendor\glad\src</Filter>
     </ClCompile>
-    <ClCompile Include="src\Grid.cpp" />
-    <ClCompile Include="src\ComputeShader.cpp" />
+    <ClCompile Include="src\core\Grid.cpp" />
+    <ClCompile Include="src\core\ComputeShader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\shaders\grid_update.comp" />
