--- a/falling-sand/falling-sand.vcxproj
+++ b/falling-sand/falling-sand.vcxproj
@@ -100,7 +100,7 @@
     <ClInclude Include="src\core\AppInstance.hpp" />
     <ClInclude Include="src\core\Application.hpp" />
     <ClInclude Include="src\core\ComputeShader.hpp" />
-    <ClInclude Include="src\core\Grid.hpp" />
+    <ClInclude Include="src\Grid.hpp" />
     <ClInclude Include="src\core\InputHandler.hpp" />
     <ClInclude Include="src\core\Shader.hpp" />
     <ClInclude Include="src\FallingSand.hpp" />
@@ -108,7 +108,7 @@
   <ItemGroup>
     <ClCompile Include="src\core\Application.cpp" />
     <ClCompile Include="src\core\ComputeShader.cpp" />
-    <ClCompile Include="src\core\Grid.cpp" />
+    <ClCompile Include="src\Grid.cpp" />
     <ClCompile Include="src\core\InputHandler.cpp" />
     <ClCompile Include="src\core\Shader.cpp" />
     <ClCompile Include="src\FallingSand.cpp" />
